The App and project components

--- a/terra.html
+++ b/terra.html
@@ -49,12 +49,9 @@
 
 <body>
 	<div id="info">
-		# Simulate 1110.
+		<p id="myList"></p>
+		<!-- # Simulate 1110. -->
 	</div>
-
-    <script>
-		var bggrid = [50][50];
-	</script>
 
 	<script src="terra.js"></script>
 	<script src="terra-app.js"></script>
