--- a/terra.html
+++ b/terra.html
@@ -54,6 +54,6 @@
 	</div>
 
 	<script src="terra.js"></script>
-	<script src="terra-app.js"></script>
+	<script type="module" src="terra-app.js"></script>
 
 </body>
